--- a/Automation of circuit design/Cursed/requirements.txt
+++ b/Automation of circuit design/Cursed/requirements.txt
@@ -6,11 +6,15 @@ kiwisolver==1.4.8
 matplotlib==3.10.0
 numpy==1.26.4
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+pytz==2025.1
 scikit-learn==1.6.1
 scikit-plot==0.3.7
 scipy==1.11.4
+seaborn==0.13.2
 six==1.17.0
 threadpoolctl==3.5.0
+tzdata==2025.2
